# quartz-like-aluminosilicate-composition-finder-app

./: .gitignore  Dockerfile  README.md  app_glass.py  pyproject.toml  requirements.txt
.github/workflows/: sync_to_hf.yml
.streamlit/: config.toml
roadlab_matnav_lib/: __init__.py  bayesian_opt.py  oxides.py  predict.py  recommend.py
tasks/: bench_n_samples.py  plan.md  todo.md
tests/: test_apply_threshold.py  test_recommend_coverage.py  test_recommend_score.py  test_sampling_strategy.py  test_sparse_sampler.py  test_topk_stability.py  test_ui_glass_type.py  test_ui_sidebar_order.py  test_ui_tan_target.py  test_ui_tg_cte.py
